-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u80, 8, 9
-
Component/s: client-libs
-
b124
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8169139 | 8u152 | Dmitry Markov | P3 | Resolved | Fixed | b01 |
| JDK-8162934 | 8u102 | Dmitry Markov | P3 | Resolved | Fixed | b32 |
| JDK-8167799 | emb-8u121 | Dmitry Markov | P3 | Resolved | Fixed | b01 |
| JDK-8181007 | openjdk7u | Dmitry Markov | P3 | Resolved | Fixed | master |
- backported by
-
JDK-8162934 [macosx] java 7 and 8 JDialogs on multiscreen jump to parent frame on focus
-
- Resolved
-
-
JDK-8167799 [macosx] java 7 and 8 JDialogs on multiscreen jump to parent frame on focus
-
- Resolved
-
-
JDK-8169139 [macosx] java 7 and 8 JDialogs on multiscreen jump to parent frame on focus
-
- Resolved
-
-
JDK-8181007 [macosx] java 7 and 8 JDialogs on multiscreen jump to parent frame on focus
-
- Resolved
-
- duplicates
-
JDK-8069154 [macosx] Modal JDialog moves from position in secondary monitor to primary monitor
-
- Closed
-
- relates to
-
JDK-8169589 [macosx] Activating a JDialog puts to back another dialog
-
- Resolved
-
-
JDK-8252373 [macOS] Stage with owner disappears when moved to another screen
-
- Resolved
-
-
JDK-8163583 [macosx] Press "To Back" button on the Dialog,the Dialog moves behind the Frame
-
- Closed
-