8080729: [macosx] java 7 and 8 JDialogs on multiscreen jump to parent frame on focus Reviewed-by: ant, denis